tests/error/type_match/base_case_tuple_mismatched_elem_count3.bz
function test()
{
	let _: [int32, float64, ...str] = [int32]();
}
